buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "org.parchmentmc.librarian.forgegradle"
apply plugin: "org.spongepowered.mixin"
apply plugin: "eclipse"
apply plugin: "maven-publish"

repositories {
    mavenCentral()
    jcenter()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
        url = "https://repo.spongepowered.org/maven"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
        content {
            includeGroup "mezz.jei"
            includeGroup "slimeknights.mantle"
            includeGroup "slimeknights.tconstruct"
        }
    }
    maven {
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "blusunrize.immersiveengineering"
            includeGroup "com.blamejared.crafttweaker"
            includeGroup "net.darkhax.openloader"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        url = "https://maven.theillusivec4.top/"
        content {
            includeGroup "top.theillusivec4.curios"
        }
    }
    maven {
        url = "https://maven.architectury.dev/"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        url = "https://maven.saps.dev/releases/"
        content {
            includeGroup "dev.ftb.mods"
            includeGroup "dev.latvian.mods"
        }
    }
    maven {
        url = "https://maven.tterrag.com/"
        content {
            includeGroup "com.jozufozu.flywheel"
            includeGroup "com.simibubi.create"
        }
    }
    maven {
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
        content {
            includeGroup "software.bernie.geckolib"
        }
    }
    maven {
        url = "https://maven.covers1624.net/"
        content {
            includeGroup "com.teamcofh"
        }
    }
    maven {
        url = "https://pkgs.dev.azure.com/Kotori316/minecraft/_packaging/mods/maven/v1/"
        content {
            includeGroup "com.kotori316"
        }
    }
    maven {
        url = "https://jenkins.bdew.net/maven/"
        content {
            includeGroup "net.bdew"
        }
    }
    maven {
        url = "https://repo.repsy.io/mvn/klikli-dev/mods/"
        content {
            includeGroup "com.klikli_dev"
        }
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "4.1.14.26"
group = "thelm.jaopca"
archivesBaseName = "JAOPCA-1.18.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: "parchment", version: "2022.09.04-1.18.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.18.2-40.2.1"
    annotationProcessor "org.spongepowered:mixin:0.8.4:processor"

    implementation fg.deobf("mezz.jei:jei-1.18.2:9.7.2.1001")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.205")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.18.2-5.0.8.0")
    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-1.18.2:0.6.8.a-99")
    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-1.18:3.0.57")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1")
    implementation fg.deobf("slimeknights.mantle:Mantle:1.18.2-1.9.43")
    implementation fg.deobf("com.teamcofh:cofh_core:1.18.2-9.2.1.39")
    implementation fg.deobf("dev.latvian.mods:rhino-forge:1802.2.1-build.255")
    implementation fg.deobf("dev.architectury:architectury-forge:4.11.89")
    implementation fg.deobf("dev.ftb.mods:ftb-library-forge:1802.3.11-build.177") {
        transitive = false
    }
    implementation("com.kotori316:scalablecatsforce:2.13.8-build-4:with-library") {
        transitive = false
    }
    implementation fg.deobf("net.bdew:bdlib:1.19.3.7-mc1.18.2")
    implementation fg.deobf("com.klikli_dev:modonomicon:1.18.2-1.25.0")
    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1802.5.5-build.569") {
        transitive = false
    }
    implementation fg.deobf("net.darkhax.openloader:OpenLoader-Forge-1.18.2:12.0.1")
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:1.18.2-8.3.1-157.2")
    implementation fg.deobf("com.simibubi.create:create-1.18.2:0.5.0.i-250:all")
    implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.18.2-3.6.3.111")
    implementation fg.deobf("mekanism:Mekanism:1.18.2-10.2.5.465")
    implementation fg.deobf("mekanism:Mekanism:1.18.2-10.2.5.465:generators")
    implementation fg.deobf("dev.ftb.mods:ftb-industrial-contraptions:1802.1.6-build.220") {
        transitive = false
    }
    implementation fg.deobf("com.teamcofh:thermal_foundation:1.18.2-9.2.0.46")
    implementation fg.deobf("com.teamcofh:thermal_expansion:1.18.2-9.2.0.20")
    implementation fg.deobf("com.teamcofh:thermal_integration:1.18.2-9.2.0.16")
    implementation fg.deobf("redsnakegames.mcenderdragon:futurepack:1.18.2-33.0.7482")
    implementation fg.deobf("net.bdew:factorium:1.1.0.10-mc1.18.2")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    implementation fg.deobf("curse.maven:ato-405593:3975599")
    implementation fg.deobf("curse.maven:allthemodium-364466:4019806")
    implementation fg.deobf("curse.maven:electrodynamics-316867:3928753")
    implementation fg.deobf("curse.maven:voluminous-energy-416704:3943624")
    implementation fg.deobf("curse.maven:cyclops-core-232758:4357243")
    implementation fg.deobf("curse.maven:common-capabilities-247007:4391353")
    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4391515")
    implementation fg.deobf("curse.maven:essentials-293752:3796423")
    implementation fg.deobf("curse.maven:crossroads-mc-250231:3813964")
    implementation fg.deobf("curse.maven:assemblylinemachines-388282:3949460")
    implementation fg.deobf("curse.maven:smartbrainlib-661293:4318519")
    implementation fg.deobf("curse.maven:occultism-361026:4402690")
    implementation fg.deobf("curse.maven:cyclic-239286:4384627")
    implementation fg.deobf("curse.maven:blood-magic-224791:3953207")
    implementation fg.deobf("curse.maven:lavatech-533955:4154002")
    implementation fg.deobf("curse.maven:industrial-reborn-358877:4034099")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "JAOPCA",
                "Specification-Vendor": "thelm",
                "Specification-Version": "4",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm",
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConnector": "thelm.jaopca.mixins.JAOPCAMixinConnector"
        ],)
    }
}

mixin {
    add sourceSets.main, "jaopca.refmap.json"
}
